News
====

Pyclewn 2.0
-----------

.. January 15, 2015

Changes
^^^^^^^

* Windows support has been removed. Pyclewn runs now on Python 2.7 or Python
  3.1 or newer and the same source code is used for all those Python versions.
  Pyclewn uses now asyncio (or trollius on Python versions that do not support
  asyncio, i.e. version 2.7 or older than 3.4) instead of the deprecated
  asyncore Python module.

* The preferred method to install pyclewn is now ``pip``. The Vim run time
  files are installed with a vimball. Local installation is done using the
  Python user scheme instead of the home scheme. pdb-clone is now installed
  separately from PyPI.

* Pyclewn is now started from a shell command line with the command ``python
  -m clewn`` followed by the options and an optional argument that selects
  which debugger to run.

Bug fixes
^^^^^^^^^

* When pyclewn is started from a terminal, the controlling terminal of the gdb
  inferior process is now correctly set to the terminal from where pyclewn has
  been started.

* The terminal spawned by the ``inferiortty`` command is now automatically
  closed at the end of each debugging session.

Pyclewn 1.11
------------

.. September 10, 2013

Bug fix
^^^^^^^

* Fix gdb version detection on linux Suse 12.2 and Fedora 19 that print a gdb
  header not GNU standards compliant.

Pyclewn 1.10
------------

.. February 7, 2013

New feature
^^^^^^^^^^^

* Use now pdb-clone_ instead of the standard library Python debugger, pdb_.

  * With breakpoints, pyclewn runs now just above the speed of the
    Python interpreter, while the command line Python debugger pdb runs at 10
    to 100 times the speed of the interpreter.

  * pdb-clone fixes also many pdb long standing bugs.

* Add the pdb ``commands`` command.

* Add the pdb ``inferiortty`` command to be used on unix when the python
  script is started from Vim. The command can be issued at any time during the
  debugging session.
